[package]
name = "django-lightning-service"
version = "0.1.0"
edition = "2021"

[package.metadata.maturin]
# python-source = "python"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "django_lightning_service"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"


[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng"
]